--- a/backend/package.json
+++ b/backend/package.json
@@ -9,25 +9,37 @@
     "dev": "nodemon src/app.js",
     "test": "jest"
   },
-  "keywords": ["node", "express", "sqlite", "sharepoint"],
+  "keywords": [
+    "node",
+    "express",
+    "sqlite",
+    "sharepoint"
+  ],
   "author": "FluxoClienteCS Team",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "jsonwebtoken": "^9.0.2",
+    "@azure/msal-node": "^3.7.2",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
-    "joi": "^17.11.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "isomorphic-fetch": "^3.0.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^6.9.7",
+    "qs": "^6.14.0",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1",
-    "nodemailer": "^6.9.7",
-    "crypto": "^1.0.1"
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.1"
   }
 }
