--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,8 @@
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^6.9.7",
+    "officegen": "^0.6.5",
+    "puppeteer": "^24.17.0",
     "qs": "^6.14.0",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1",
